compiler/compiler/tests/language/negative/oopSurfaceRoleCapability/module/surfaceQualifierBypassesVisibility.qn
module app.badSurfaceVisibility

import http.core.{PublicRouteCarrier}

pub bypass(route: PublicRouteCarrier) -> i64 {
  return route.context.internalRouteValue()
}
